feat: create home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images/logo.png" type="page-logo">
+  <link rel="icon" href="images/logo.png" type="image/png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <title>DriveOn</title>
@@ -20,19 +20,35 @@
       <a class="menu" href="#">About Us</a>
       <a class="menu" href="#">Contact</a>
     </nav>
-    <div class="user-auth">
-      <button class="login-button">
-        <img src="/images/icone-login-teste-programador.png" alt="login-icon" class="login-icon"/>
-        Log in
-      </button>
-      <button class="signup-button">
-        Sign Up
-      </button>
-    </div>
+    <button class="login-button">
+      <img src="/images/icone-login-teste-programador.png" alt="login-icon" class="login-icon"/>
+      Log in
+    </button>
+    <button class="signup-button">
+      Sign Up
+    </button>
   </header>
   <main>
+    <section class="home">
+      <div>
+        <h1>Start Your <br> Workday <br> Comfortably</h1>
+        <p>
+          Get in, sit back and experience the comfort of car <br> that takes you directly to your destination. <br>
+          Arriving work as a sardine with public transport or <br> sweating is a thing of the past.
+        </p>
+      <button>Discover</button>
+      </div>
+      <div class="home-image">
+        <img src="/images/img-banner-teste-programador.png" alt="img-banner"/>
+      </div>
+    </section>
+    <section class="get-started">
+      <h2>How to get started?</h2>
+      
+    </section>
   </main>
   <footer>
+
   </footer>
   <script src="/scripts/script.js"></script>
 </body>
