feat: move images to /public/images folder

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images/logo.png" type="image/png">
+  <link rel="icon" href="public/images/logo.png" type="image/png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <title>DriveOn</title>
 </head>
 <body>
   <header>
-    <img src="/images/logo-teste-programador.png" alt="DriveOn-logo">
+    <img src="public/images/logo-teste-programador.png" alt="DriveOn-logo">
     <nav>
       <a class="menu" href="#">Drivers</a>
       <a class="menu" href="#">Passengers</a>
@@ -21,7 +21,7 @@
       <a class="menu" href="#">Contact</a>
     </nav>
     <button class="login-button">
-      <img src="/images/icone-login-teste-programador.png" alt="login-icon" class="login-icon"/>
+      <img src="public/images/icone-login-teste-programador.png" alt="login-icon" class="login-icon"/>
       Log in
     </button>
     <button class="signup-button">
@@ -39,12 +39,13 @@
       <button>Discover</button>
       </div>
       <div class="home-image">
-        <img src="/images/img-banner-teste-programador.png" alt="img-banner"/>
+        <img src="public/images/img-banner-teste-programador.png" alt="img-banner"/>
       </div>
     </section>
     <section class="get-started">
+      <div class="division"><img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line"/></div>
       <h2>How to get started?</h2>
-      
+      <div></div>
     </section>
   </main>
   <footer>
