--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
       </div>
     </section>
     <section class="get-started">
-      <div class="division"><img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line"/></div>
-      <h2>How to get started?</h2>
-      <div></div>
+      <div class="division">
+        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line"/>
+        <h2>How to get started?</h2>
+      </div>
+      <div id="get-started-cards"></div>
     </section>
   </main>
   <footer>
