feat: create about us page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="public/images/logo.png" type="image/png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -49,10 +50,23 @@
       </div>
       <div id="get-started-cards"></div>
     </section>
+    <section class="about-us">
+      <div>
+        <img src="./public/images/img-fundo-teste-programador.png" alt="img-background" class="about-us-background-image">
+      </div>
+      <div>
+        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line" class="about-us-division-line"/>
+        <p>
+          DriveOn is a mobile carpool platform that effortlessly <br> brings commuters together in one car. <br> Travelling home and work will neve be the same again. <br> Our mission is to stop traffic jams and CO2 pollution <br> as a result of inefficient car commuting.
+        </p>
+        <p>Are you in?</p>
+        <button>Learn more ››</button>
+      </div>
+    </section>
   </main>
   <footer>
 
   </footer>
-  <script src="/scripts/script.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
