--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
         <button>Learn more ››</button>
       </div>
     </section>
+    <section class="commitment">
+      <div class="commitment-info">
+        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line"/>
+        <h2>Our commitment <br> to your safety</h2>
+        <p>
+          With every safe future we add <br> and every standard in the Community Guide that we uphold, <br> we are commiting to protecting you throughout the journey. <br> Learn more about our Community Guide
+          <strong>
+            <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="underline" class="underline">
+            here.
+          </img>
+        </strong>
+        </p>
+        <button>See all safety features ››</button>
+      </div>
+      <img src="./public/images/img-fundo-2-teste-programador.png" alt="img-background-2" class="img-background-commitment">
+    </section>
   </main>
   <footer>
 
