feat: create download page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,29 @@
       </div>
       <img src="./public/images/img-fundo-2-teste-programador.png" alt="img-background-2" class="img-background-commitment">
     </section>
+    <section class="download">
+      <div class="download-info">
+        <div class="download-line"></div>
+        <h2>Download the DriveOn application <br> to get more benefits and experience</h2>
+        <button>
+          <img src="./public/images/claystore.svg" alt="ClayStore-Logo" class="claystore-logo">
+          <p>
+            GET IT ON <br>
+            <strong>Clay Store</strong>
+          </p>
+        </button>
+        <button>
+          <img src="./public/images/playapp.png" alt="PlayApp-Logo" class="playapp-logo">
+          <p>
+            Download on the <br>
+            <strong>Play APP</strong>
+          </p>
+        </button>
+      </div>
+    </section>
+    <section class="register">
+
+    </section>
   </main>
   <footer>
 
