feat: create register page

--- a/index.html
+++ b/index.html
@@ -100,7 +100,24 @@
       </div>
     </section>
     <section class="register">
-
+      <div class="register-content">
+        <div>
+          <h2>Register to be <br> a driver partner</h2>
+          <img src="./public/images/setas-teste-programador.png" alt="arrow" class="arrow">
+        </div>
+        <div>
+          <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="line" class="register-line">
+        </div>
+      </div>
+      <div class="register-content">
+        <div>
+          <h2>Register to start <br> your journey</h2>
+          <img src="./public/images/setas-teste-programador.png" alt="arrow" class="arrow">
+        </div>
+        <div>
+          <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="line" class="register-line">
+        </div>
+      </div>
     </section>
   </main>
   <footer>
