feat: separate css styles by section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-  <link rel="icon" href="public/images/logo.png" type="image/png">
+  <link rel="icon" href="public/images/logo.svg" type="image/png">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/get-started.css">
+  <link rel="stylesheet" href="css/about-us.css">
+  <link rel="stylesheet" href="css/commitment.css">
+  <link rel="stylesheet" href="css/download.css">
+  <link rel="stylesheet" href="css/register.css">
+  <link rel="stylesheet" href="css/footer.css">
   <title>DriveOn</title>
 </head>
 <body>
@@ -22,7 +30,7 @@
       <a class="menu" href="#">Contact</a>
     </nav>
     <button class="login-button">
-      <img src="public/images/icone-login-teste-programador.png" alt="login-icon" class="login-icon"/>
+      <img src="public/images/icone-login-teste-programador.png" alt="login-icon" class="login-icon" draggable="false"/>
       Log in
     </button>
     <button class="signup-button">
@@ -40,22 +48,22 @@
       <button>Discover</button>
       </div>
       <div class="home-image">
-        <img src="public/images/img-banner-teste-programador.png" alt="img-banner"/>
+        <img src="public/images/img-banner-teste-programador.png" alt="img-banner" draggable="false"/>
       </div>
     </section>
     <section class="get-started">
       <div class="division">
-        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line"/>
+        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line" draggable="false"/>
         <h2>How to get started?</h2>
       </div>
       <div id="get-started-cards"></div>
     </section>
     <section class="about-us">
       <div>
-        <img src="./public/images/img-fundo-teste-programador.png" alt="img-background" class="about-us-background-image">
+        <img src="./public/images/img-fundo-teste-programador.png" alt="img-background" class="about-us-background-image" draggable="false">
       </div>
       <div>
-        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line" class="about-us-division-line"/>
+        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line" class="about-us-division-line" draggable="false"/>
         <p>
           DriveOn is a mobile carpool platform that effortlessly <br> brings commuters together in one car. <br> Travelling home and work will neve be the same again. <br> Our mission is to stop traffic jams and CO2 pollution <br> as a result of inefficient car commuting.
         </p>
@@ -65,33 +73,33 @@
     </section>
     <section class="commitment">
       <div class="commitment-info">
-        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line"/>
+        <img src="public/images/linha-reta-teste-programador.png.jpg" alt="division-line" draggable="false"/>
         <h2>Our commitment <br> to your safety</h2>
         <p>
           With every safe future we add <br> and every standard in the Community Guide that we uphold, <br> we are commiting to protecting you throughout the journey. <br> Learn more about our Community Guide
           <strong>
-            <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="underline" class="underline">
+            <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="underline" class="underline" draggable="false">
             here.
           </img>
         </strong>
         </p>
         <button>See all safety features ››</button>
       </div>
-      <img src="./public/images/img-fundo-2-teste-programador.png" alt="img-background-2" class="img-background-commitment">
+      <img src="./public/images/img-fundo-2-teste-programador.png" alt="img-background-2" class="img-background-commitment" draggable="false">
     </section>
     <section class="download">
       <div class="download-info">
         <div class="download-line"></div>
         <h2>Download the DriveOn application <br> to get more benefits and experience</h2>
         <button>
-          <img src="./public/images/claystore.svg" alt="ClayStore-Logo" class="claystore-logo">
+          <img src="./public/images/claystore.svg" alt="ClayStore-Logo" class="claystore-logo" draggable="false">
           <p>
             GET IT ON <br>
             <strong>Clay Store</strong>
           </p>
         </button>
         <button>
-          <img src="./public/images/playapp.png" alt="PlayApp-Logo" class="playapp-logo">
+          <img src="./public/images/playapp.png" alt="PlayApp-Logo" class="playapp-logo" draggable="false">
           <p>
             Download on the <br>
             <strong>Play APP</strong>
@@ -103,26 +111,66 @@
       <div class="register-content">
         <div>
           <h2>Register to be <br> a driver partner</h2>
-          <img src="./public/images/setas-teste-programador.png" alt="arrow" class="arrow">
+          <img src="./public/images/setas-teste-programador.png" alt="arrow" class="arrow" draggable="false">
         </div>
         <div>
-          <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="line" class="register-line">
+          <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="line" class="register-line" draggable="false">
         </div>
       </div>
       <div class="register-content">
         <div>
           <h2>Register to start <br> your journey</h2>
-          <img src="./public/images/setas-teste-programador.png" alt="arrow" class="arrow">
+          <img src="./public/images/setas-teste-programador.png" alt="arrow" class="arrow" draggable="false">
         </div>
         <div>
-          <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="line" class="register-line">
+          <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="line" class="register-line" draggable="false">
         </div>
       </div>
     </section>
   </main>
   <footer>
-
+    <div class="footer-outer">
+      <div class="footer-inner-left">
+       <h3>Drive<img src="./public/images/location-icon.svg" alt="location-icon" draggable="false">n</h3>
+       <p><ion-icon name="help-circle-outline"></ion-icon>Resolution Center</p>
+       <p><ion-icon name="chatbox" class="chatbox"></ion-icon>English</p>
+      </div>
+      <div class="footer-inner-right">
+        <div>
+          <h3>About Us</h3>
+          <p>Newsroom</p>
+          <p>Investor relations</p>
+          <p>Global citizenship</p>
+          <p>Safety</p>
+          <p>Blog</p>
+          <p>Career</p>
+        </div>
+        <div>
+          <h3>Our product</h3>
+          <p>Take a trip</p>
+          <p>Drive it</p>
+          <p>Eats</p>
+          <p>DriveOn for Business</p>
+          <p>DriveOn Freight</p>
+          <p>Health</p>
+          <p>DriveOn Air</p>
+          <p>Advanced Technologies Group</p>
+        </div>
+      </div>
+      </div>
+    <div class="footer-bottom">
+      <div>&copy; 2019 DriveOn Technologies Inc.</div>
+      <div>
+        <img src="./public/images/logo-facebook.svg" alt="logo-facebook" class="logo-facebook" draggable="false">
+        <ion-icon name="logo-twitter"></ion-icon>
+        <ion-icon name="logo-youtube"></ion-icon>
+        <ion-icon name="logo-instagram"></ion-icon>
+        <ion-icon name="logo-linkedin"></ion-icon>
+      </div>
+    </div>
   </footer>
   <script src="./scripts/script.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
