feat: create some css animations

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/download.css">
   <link rel="stylesheet" href="css/register.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>DriveOn</title>
 </head>
 <body>
@@ -78,7 +79,7 @@
         <p>
           With every safe future we add <br> and every standard in the Community Guide that we uphold, <br> we are commiting to protecting you throughout the journey. <br> Learn more about our Community Guide
           <strong>
-            <img src="./public/images/linha-reta-teste-programador.png.jpg" alt="underline" class="underline" draggable="false">
+            <span class="underline"></span>
             here.
           </img>
         </strong>
@@ -172,5 +173,9 @@
   <script src="./scripts/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
